// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileView /> snapshots should render loading when the user is undefined 1`] = `
<ContentView
  backButton={false}
  className="profileView"
  loading={true}
  refresh={[Function]}
  title="Profile"
>
  <ion-fab
    horizontal="right"
    vertical="bottom"
  >
    <ion-fab-button
      onClick={[Function]}
    >
      <ion-icon
        name="options"
      />
    </ion-fab-button>
  </ion-fab>
</ContentView>
`;

exports[`<ProfileView /> snapshots should render the details of the logged in user 1`] = `
<ContentView
  backButton={false}
  className="profileView"
  loading={false}
  refresh={[Function]}
  title="Profile"
>
  <ion-card>
    <ion-card-header>
      testuser
    </ion-card-header>
    <ion-card-content>
      <ion-list>
        <ion-item>
          <ion-label
            color="tertiary"
          >
            Email
          </ion-label>
          <h2>
            test@user.com
          </h2>
        </ion-item>
        <ion-item>
          <ion-label
            color="tertiary"
          >
            First Name
          </ion-label>
          <h2>
            Test
          </h2>
        </ion-item>
        <ion-item>
          <ion-label
            color="tertiary"
          >
            Last Name
          </ion-label>
          <h2>
            McUser
          </h2>
        </ion-item>
      </ion-list>
    </ion-card-content>
  </ion-card>
  <ion-fab
    horizontal="right"
    vertical="bottom"
  >
    <ion-fab-button
      onClick={[Function]}
    >
      <ion-icon
        name="options"
      />
    </ion-fab-button>
  </ion-fab>
</ContentView>
`;

exports[`<ProfileView /> snapshots should render the details of the user 1`] = `
<ContentView
  backButton={true}
  className="profileView"
  loading={false}
  refresh={[Function]}
  title="Profile"
>
  <ion-card>
    <ion-card-header>
      testuser
    </ion-card-header>
    <ion-card-content>
      <ion-list>
        <ion-item>
          <ion-label
            color="tertiary"
          >
            Email
          </ion-label>
          <h2>
            test@user.com
          </h2>
        </ion-item>
        <ion-item>
          <ion-label
            color="tertiary"
          >
            First Name
          </ion-label>
          <h2>
            Test
          </h2>
        </ion-item>
        <ion-item>
          <ion-label
            color="tertiary"
          >
            Last Name
          </ion-label>
          <h2>
            McUser
          </h2>
        </ion-item>
      </ion-list>
    </ion-card-content>
  </ion-card>
</ContentView>
`;
